# sqli-hunter

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
proto/: scanner.proto
src/: calibration.rs  cli.rs  context.rs  db.rs  evasion.rs  lib.rs  main.rs  models.rs  oob.rs  payloads.rs  scanner.rs  scanner_tests.rs  spider.rs  tamper.rs  utils.rs  waf.rs
src/analysis/: mod.rs  structural.rs
src/auth/: macro_executor.rs  mod.rs  session.rs
src/daemon/: job.rs  mod.rs  server.rs
src/reporting/: cicd.rs  mod.rs  pdf.rs
src/ui/: dashboard.rs  mod.rs  widgets.rs
tests/: hpp_verification.rs  waf_safety.rs
